--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,18 @@ html{
   color: white;
 }
 
-.header p{
+.header a{
   color: aquamarine;
   font-size: 16px;
+}
+
+.belly h2{
+  font-weight: 300;
+  font-size: 42px;
+  color: white;
+}
+
+.belly p{
+  font-size: 21px;
+  color: gray;
 }
