--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,18 +10,23 @@ html{
   color: white;
 }
 
-.header a{
+a{
   color: aquamarine;
   font-size: 16px;
 }
 
-.belly h2{
+h2{
   font-weight: 300;
   font-size: 42px;
   color: white;
 }
 
-.belly p{
+.belly p,
+#tag{
   font-size: 21px;
   color: gray;
+}
+
+#tag{
+  text-align: right;
 }
